--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,8 @@
+@import url('http://fonts.cdnfonts.com/css/open-sans');
+
 html, body{
   padding: 0;
   margin: 0;
+  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
